--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -374,7 +374,7 @@ format-connected-prefix = " "
 format-connected-prefix-foreground = ${colors.foreground-alt}
 format-disconnected = <label-disconnected>
 ;label-connected = %{A1:networkmanager_dmenu:}%downspeed%%{A}
-label-connected = %local_ip%}
+label-connected = %local_ip%
 label-connected-foreground = ${colors.foreground}
 label-disconnected = no connection
 format-padding = 3
