--- a/.config/i3/config
+++ b/.config/i3/config
@@ -210,3 +210,21 @@ gaps outer 3
 bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
 bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
 
+set $ws1 1
+set $ws2 2
+set $ws3 3
+set $ws4 4
+set $ws5 5
+set $ws6 6
+set $ws7 7
+set $ws8 8
+set $ws9 9
+set $ws0 0
+
+assign [title="Chromium"] $ws1
+assign [title="idea-ultimate"] $ws4
+assign [class="jetbrains-phpstorm"] $ws4
+assign [class="pycharm-professional"] $ws4
+assign [class="evolution"] $ws8
+assign [title="GitKraken"] $ws9
+assign [class="slack"] $ws0
