--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -322,7 +322,7 @@ format-prefix-foreground = ${colors.foreground}
 
 
 [module/volume]
-type = internal/volume
+type = internal/alsa
 format-volume = <ramp-volume> <label-volume>
 label-volume = %percentage%%
 label-volume-foreground = ${root.foreground}
@@ -481,18 +481,18 @@ menu-1-3 = "  "
 menu-1-3-exec = kate
 
 menu-2-0 = "  "
-menu-2-0-exec = chromium https://crunchyroll.com
+menu-2-0-exec = "chromium https://crunchyroll.com"
 menu-2-1 = "  "
 menu-2-1-exec = "chromium https://reddit.com"
 menu-2-2 = "  "
 menu-2-2-exec = "chromium https://facebook.com"
 
 menu-4-0 = "  "
-menu-4-0-exec = ~/.config/i3/i3lock-color.sh
+menu-4-0-exec = "~/.config/i3/i3lock-color.sh"
 menu-4-1 = "  "
-menu-4-1-exec = systemctl reboot
+menu-4-1-exec = "systemctl reboot"
 menu-4-2 = "  "
-menu-4-2-exec = systemctl poweroff
+menu-4-2-exec = "systemctl poweroff"
 
 
 [module/pavolume]
