--- a/.config/taffybar/my-taffybar.cabal
+++ b/.config/taffybar/my-taffybar.cabal
@@ -23,4 +23,5 @@ executable my-taffybar
                      , gi-gtk
                      , transformers
                      , mtl
+                     , text
   default-language:    Haskell2010
