--- a/.config/taffybar/my-taffybar.cabal
+++ b/.config/taffybar/my-taffybar.cabal
@@ -23,4 +23,6 @@ executable my-taffybar
                      , gi-gtk
                      , transformers
                      , mtl
+                     , download-curl
+                     , text
   default-language:    Haskell2010
