--- a/.config/i3/config
+++ b/.config/i3/config
@@ -12,12 +12,23 @@ exec sh ~/.screenlayout/default.sh
 #exec compton -i .5 --active-opacity .96
 #exec gnome-settings-daemon
 
-exec_always --no-startup-id ~/.config/i3/polybar.sh
+workspace 1 output HDMI-1
+workspace 2 output HDMI-1
+workspace 3 output HDMI-1
+workspace 4 output DP-1-3
+workspace 5 output DP-1-3
+workspace 6 output DP-1-3
+workspace 7 output eDP-1
+workspace 8 output eDP-1
+workspace 9 output eDP-1
+workspace 10 output eDP-1
+
+#exec_always --no-startup-id ~/.config/i3/polybar.sh
 exec_always --no-startup-id ~/.config/i3/compton.sh &
 #exec_always --no-startup-id ~/.config/i3/feh.sh &
-exec_always --no-startup-id ~/.config/i3/nitrogen.sh &
+#exec_always --no-startup-id ~/.config/i3/nitrogen.sh &
 #exec_always --no-startup-id ~/.config/i3/dropbox.sh &
-exec_always --no-startup-id ~/.config/i3/nm-applet.sh &
+#exec_always --no-startup-id ~/.config/i3/nm-applet.sh &
 #exec_always --no-startup-id ~/.config/i3/blueberry.sh &
 #exec_always --no-startup-id ~/.config/i3/mopidy.sh &
 exec_always --no-startup-id ~/.config/i3/gnome-settings.sh &
@@ -26,11 +37,21 @@ exec_always --no-startup-id ~/.config/i3/dunst.sh &
 exec --no-startup-id ~/.config/i3/onedrived.sh &
 exec_always --no-startup-id polychromatic.sh &
 #exec_always --no-startup-id ~/.config/i3/redshift.sh 
+exec --no-startup-id guake &
+exec --no-startup-id trbg &
 
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+
+#bindsym XF86MonBrightnessUp 
+
+bindsym XF86Launch6 exec --no-startup-id kectrum
+bindsym XF86Launch7 exec --no-startup-id kwave
+bindsym XF86Launch8 exec --no-startup-id koff
+bindsym button5 exec --no-startup-id Ctrl+Shift+Tab
+bindsym button4 exec --no-startup-id Ctrl+Tab
 
 # Evolution
 # exec_always --no-startup-id ~/.config/i3/klaunch_app.sh evolution &
@@ -64,7 +85,8 @@ font hack:monospace 8
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec konsole
+bindsym $mod+Shift+Return exec kitty
+bindsym $mod+Return exec sudo -i -u evanjs kitty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -72,8 +94,8 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 #bindsym $mod+d exec dmenu_run
 #bindsym $mod+d exec dmenu
-bindsym $mod+d exec rofi -modi -lines 7 -show run -columns 2
-bindsym $mod+shift+s exec rofi -show ssh -columns 2 -lines 7 -terminal konsole
+bindsym $mod+d exec sudo -i -u evanjs rofi -modi -lines 7 -show run -columns 2
+bindsym $mod+shift+s exec sudo -i -u evanjs rofi -show ssh -columns 2 -lines 7
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -158,7 +180,7 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
-bindsym $mod+Shift+Ctrl+r exec "i3-nagbar -t warning -m 'Do you really want to reboot?' -b 'Reboot' 'i3-msg exec systemctl reboot'"
+bindsym $mod+Shift+Ctrl+r exec "i3-nagbar -t warning -m 'Do you really want to reboot?' -b 'Reboot' 'i3-msg exec reboot'"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -186,14 +208,22 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-bindsym $mod+ctrl+l exec /home/evanjs/.config/i3/i3lock-color.sh
+bindsym $mod+ctrl+l exec /home/evanjs/.config/i3/i3lock-fancy-temp.sh
+bindsym $mod+ctrl+x exec xtrlock
 
-bindsym Print exec --no-startup-id spectacle &
+#bindsym Print exec --no-startup-id spectacle &
+#bindsym Print exec --no-startup-id scrot -s &
+#
+bindsym --release Print exec maim -s ~/Pictures/screenshots/$(date +%Y-%m-%d_%T).png
+bindsym --release Shift+Print maim -i $(xdotool getactivewindow) ~/Pictures/screenshots/$(date +%Y-%m-%d_%T).png
+
+bindsym $mod+shift+b exec trbg
 
 for_window [class="^.*"] border pixel 0
 
-gaps inner 6
-gaps outer 3
+gaps outer 15
+gaps inner 10
+smart_gaps on
 
 #exec /usr/bin/compton --config /home/evanjs/.compton.conf~.i3/config
 #exec compton
@@ -207,6 +237,11 @@ gaps outer 3
 #	status_command polybar
 #}
 
+bar {
+	status_command i3blocks
+	font pango:FontAwesome 9
+}
+
 bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
 bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
 
@@ -219,7 +254,7 @@ set $ws6 6
 set $ws7 7
 set $ws8 8
 set $ws9 9
-set $ws0 0
+set $ws0 10
 
 assign [title="Chromium"] $ws1
 assign [title="idea-ultimate"] $ws4
@@ -227,4 +262,17 @@ assign [class="jetbrains-phpstorm"] $ws4
 assign [class="pycharm-professional"] $ws4
 assign [class="evolution"] $ws8
 assign [title="GitKraken"] $ws9
-assign [class="slack"] $ws0
+assign [class="Slack"] $ws0
+assign [title="^Developer Tools.*$" class="chromium-browser-chromium" window_role="pop-up"] $ws5 # currently broken
+
+# Program bindings
+#
+
+# custom float settings
+for_window [class="tilda" instance="dropdown"] floating enable move absolute position 0 0
+for_window [title="xkbd"] floating enable
+for_window [title="florence"] floating enable
+for_window [title="xvkbd"] floating enable
+for_window [title="Keyboard"] floating enable
+
+mouse_warping none
