--- a/.xmonad/stack.yaml
+++ b/.xmonad/stack.yaml
@@ -64,7 +64,7 @@ extra-deps: [
     spool-0.1,
     containers-0.5.11.0,
     X11-1.8,
-    gi-dbusmenu-0.4.1
+    gi-dbusmenu-0.4.1,
   ]
 
 # Override default flag values for local packages and extra-deps
