--- a/.xmonad/my-xmonad.cabal
+++ b/.xmonad/my-xmonad.cabal
@@ -15,6 +15,8 @@ executable my-xmonad
   build-depends:       base
                      , xmonad >= 0.15
                      , xmonad-contrib >= 0.15
+                     , xmonad-wallpaper
+                     , magic >= 1.1
                      , containers
                      , mtl
                      , lens
