--- a/.config/taffybar/my-taffybar.cabal
+++ b/.config/taffybar/my-taffybar.cabal
@@ -15,6 +15,12 @@ executable my-taffybar
                      , filepath
                      , gtk3
                      , taffybar
+                     , bytestring
+                     , process
+                     , gi-gtk
+                     , transformers
+                     , mtl
+                     , text
                      , xmonad-contrib>=0.15
                      , X11>=1.8
   default-language:    Haskell2010
